Fix align and size issues in the banner, and fixed the reverse issue with the nav

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 }
 
 html {
-    font-family: sans-serif;
     line-height: 1.15;
 }
 
@@ -39,9 +38,14 @@ body {
 }
 
 #menu li {
-    float: right;
+    float: left;
     list-style-type: none;
     margin-right: 30px;
+}
+
+ul.menu-direction {
+    display: flex;
+    justify-content: flex-end;
 }
 
 #menu a {
@@ -83,10 +87,11 @@ a.nav-link.btn-regular:hover {
 /* home */
 
 #home-outer {
-    height: 600px;
     width: 100%;
+    height: 520px;
     position: relative;
     color: #fff;
+    background-color: #ffc107;
 }
 
 #home-cover-text,
@@ -94,32 +99,26 @@ a.nav-link.btn-regular:hover {
     color: #fff;
 }
 
-#home-outer {
-    height: 688px;
-    background-color: #ffc107;
-}
-
 #home-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px;
 }
 
 .img-savings {
     width: auto;
-    height: 662px;
+    height: 514px;
     float: right;
     margin: 0rem 10rem 0rem 0rem;
 }
 
 .column-left {
-    flex-basis: 40%;
+    flex-basis: 50%;
     padding-right: 20px;
 }
 
 .column-right {
-    flex-basis: 60%;
+    flex-basis: 50%;
 }
 
 .home-quote {
